[package]
name = "lg"
version = "0.1.0"
authors = ["ESC <youhavethewrong@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3"
hyper = "0.13"
hyper-tls = "0.4"
serde = "1.0"
serde_derive = "1.0"
termion = "1.0"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
tui = { version = "0.8.0", default-features = false, features = ["termion"] }
